--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,14 +5,13 @@
 				<div class="navbar-header">
 					<!-- Mobile Toggle Menu Button -->
 				<a href="#" class="js-qbootstrap-nav-toggle qbootstrap-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-				<a class="navbar-brand" href="/index.html">Wedding</a> 
+				<a class="navbar-brand" href="/index.html" data-nav-section="home">Selena</a> 
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li class="active"><a href="#" data-nav-section="home"><span>Home</span></a></li>
-						<li><a href="#" data-nav-section="groom-bride"><span>Groom &amp; Bride</span></a></li>
-						<li><a href="#" data-nav-section="story"><span>Love Story</span></a></li>
-						<li><a href="/blog" class="external"><span>Blog</span></a></li>
+						<li class="active"><a href="#" data-nav-section="home"><span>About</span></a></li>
+						<li><a href="#" data-nav-section="story"><span>Story</span></a></li>
+						<li><a href="/blog" class="external" data-nav-section="blog"><span>Blog</span></a></li>
 						<!-- <li><a href="#" data-nav-section="people"><span>People</span></a></li>
 						<li><a href="#" data-nav-section="when-where"><span>When &amp; Where</span></a></li>
 						<li><a href="#" data-nav-section="rsvp"><span>RSVP</span></a></li>
